Fix trashcan visibility, fix autoclose toolbox, add in colored selection indicators as a program counter, remove IDs in predefined toolbox XML which can cause some problems.

--- a/source/view/index.css
+++ b/source/view/index.css
@@ -114,7 +114,7 @@ a:active {
 }
 
 .blocklySvg {
-    background-color: rgba( 0, 0, 0, 0.75 );
+    background-color: rgba( 100, 100, 100, 0.50 );
     border-color: rgba( 255, 255, 255, 0.25 );
 }
 
